--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "uuid": "^8.2.0"
   }
 }
